--- a/tutorial/polls/templates/polls/index.html
+++ b/tutorial/polls/templates/polls/index.html
@@ -2,5 +2,7 @@
 <body>
   <p>Hello, world. You're at the polls index.</p>
   <p>template version!</p>
+  <p>{{ hoge }}</p>
+  <p>{{ fuga }}</p>
 </body>
 </html>
