Questionモデルの値渡しと表示

--- a/tutorial/polls/templates/polls/index.html
+++ b/tutorial/polls/templates/polls/index.html
@@ -1,9 +1,5 @@
 <html>
 <body>
-  <p>Hello, world. You're at the polls index.</p>
-  <p>template version!</p>
-  <p>{{ hoge }}</p>
-  <p>{{ fuga }}</p>
-  <p>{{ piyo }}</p>
+  {{ questions }}
 </body>
 </html>
