詳細画面へのリンク追加

--- a/tutorial/polls/templates/polls/index.html
+++ b/tutorial/polls/templates/polls/index.html
@@ -4,11 +4,13 @@
     <tr>
       <th>質問内容</th>
       <th>公開日</th>
+      <th></th>
     </tr>
     {% for question in questions %}
     <tr>
       <td>{{ question.question_text }}</td>
       <td>{{ question.pub_date }}</td>
+      <td><a href="{% url 'poll_detail' question.pk %}">詳細画面へ</a></td>
     </tr>
     {% endfor %}
   </table>
