--- a/tutorial/polls/templates/polls/detail.html
+++ b/tutorial/polls/templates/polls/detail.html
@@ -1,7 +1,12 @@
-<html>
-<body>
-  <a href="{% url 'index' %}">一覧画面へ</a><br>
-  {{ question }}
-</body>
-</html>
+<h1>{{ question.question_text }}</h1>
 
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form action="{% url 'poll_vote' question.id %}" method="post">
+  {% csrf_token %}
+  {% for choice in question.choice_set.all %}
+  <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+  <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
+  {% endfor %}
+  <input type="submit" value="Vote" />
+</form>
