pollsのurl名にnamespaceを使うように修正

--- a/tutorial/polls/templates/polls/index.html
+++ b/tutorial/polls/templates/polls/index.html
@@ -10,7 +10,7 @@
     <tr>
       <td>{{ question.question_text }}</td>
       <td>{{ question.pub_date }}</td>
-      <td><a href="{% url 'poll_detail' question.pk %}">詳細画面へ</a></td>
+      <td><a href="{% url 'polls:detail' question.pk %}">詳細画面へ</a></td>
     </tr>
     {% endfor %}
   </table>
