--- a/tutorial/polls/templates/polls/results.html
+++ b/tutorial/polls/templates/polls/results.html
@@ -4,10 +4,10 @@
 
 <ul>
   {% for choice in question.choice_set.all %}
-      <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-      {% endfor %}
+    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+  {% endfor %}
 </ul>
 
-<a href="{% url 'poll_detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
 </body>
 </html>
