--- a/tutorial/polls/templates/polls/form.html
+++ b/tutorial/polls/templates/polls/form.html
@@ -1,7 +1,9 @@
 <html>
   <body>
-    <form>
+    <form method="POST">
+      {% csrf_token %}
       {{ form }}
+      <input type="submit" value="送信"/>
     </form>
   </body>
 </html>
