--- a/tutorial/polls/templates/polls/detail.html
+++ b/tutorial/polls/templates/polls/detail.html
@@ -1,8 +1,6 @@
 <h1>{{ question.question_text }}</h1>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-<form action="{% url 'polls:vote' question.id %}" method="post">
+<form action="" method="post">
   {% csrf_token %}
   {{ form }}
   <input type="submit" value="Vote" />
