--- a/tutorial/polls/templates/polls/index.html
+++ b/tutorial/polls/templates/polls/index.html
@@ -1,6 +1,10 @@
+{% load staticfiles %}
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+  </head>
 <body>
-  <table border="1">
+  <table border="1" class="table table-striped">
     <tr>
       <th>質問内容</th>
       <th>公開日</th>
