contents配置用のblock用意．index.htmlで書き換えるように修正．

--- a/tutorial/polls/templates/polls/index.html
+++ b/tutorial/polls/templates/polls/index.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
-{% load staticfiles %}
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
-  </head>
-<body>
+
+{% block contents %}
   <table border="1" class="table table-striped">
     <tr>
       <th>質問内容</th>
@@ -19,5 +15,4 @@
     </tr>
     {% endfor %}
   </table>
-</body>
-</html>
+{% endblock contents %}
