--- a/tutorial/templates/base.html
+++ b/tutorial/templates/base.html
@@ -44,12 +44,7 @@ body {
     </nav>
 
     <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
+    {% block contents %}{% endblock %}
     </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
