--- a/tutorial/polls/templates/polls/detail.html
+++ b/tutorial/polls/templates/polls/detail.html
@@ -1,3 +1,6 @@
+{% extends "polls/base.html" %}
+
+{% block contents %}
 <h1>{{ question.question_text }}</h1>
 
 <form action="" method="post">
@@ -5,3 +8,4 @@
   {{ form }}
   <input type="submit" value="Vote" />
 </form>
+{% endblock contents %}
