--- a/tutorial/polls/templates/polls/detail.html
+++ b/tutorial/polls/templates/polls/detail.html
@@ -1,11 +1,12 @@
 {% extends "polls/base.html" %}
+{% load bootstrap3 %}
 
 {% block contents %}
 <h1>{{ question.question_text }}</h1>
 
 <form action="" method="post">
   {% csrf_token %}
-  {{ form }}
+  {% bootstrap_form form %}
   <input type="submit" value="Vote" />
 </form>
 {% endblock contents %}
