--- a/tutorial/templates/base.html
+++ b/tutorial/templates/base.html
@@ -43,6 +43,7 @@ body {
     </nav>
 
     <div class="container">
+    {% bootstrap_messages messages %}
     {% block contents %}{% endblock %}
     </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
